2006-03-18  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-dense-cal.c: Replace gdk_draw_pixmap with
	  gdk_draw_drawable.

	* src/gnome/dialog-sx-from-trans.c: Let glib subtract days from a
	  GDate, because G_DATE_BAD_DAY (0) is a bad day. Clear the date
	  before setting day and update frequency specification before
	  moving one day back.

	* src/gnome-utils/gnc-embedded-window.c:
	* src/gnome/dialog-sxsincelast.c:
	* src/gnome/dialog-scheduledxaction.c: Correct SX editor and Since
	  Last Run dialog to close their register plugin pages instead of
	  only the ledgers. Fix 334627.

2006-03-18  Christian Stimming  <stimming@tuhh.de>

	* src/scm/doc.scm, src/scm/main.scm: Comment out
	gnc:load-help-topics function because it isn't used anymore, and
	with the last change it also won't be translated anymore.
	
	* src/scm/help-topics-index.scm: Remove translation macros so that
	this unused file isn't included in the translation template any
	more. Avoids useless translation work.

2006-03-17  David Hampton  <hampton@employees.org>

	* src/scm/price-quotes.scm:
	* src/gnome/dialog-price-edit-db.c: Pass a dialog pointer through
	the scm code and back to the C error display functions.  This will
	parent the error dialog properly.  Fixes 334929.

	* src/gnome-utils/account-quickfill.c: Enhance the quickfill event
	handler to detect changes in whether an account should appear in
	the quickfill.  Fixes 334787.

	* src/gnome-utils/gnc-file.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/engine/gnc-hooks.[ch]: Add a "book saved" hook.  Use this to
	update the window titles after a file is saved.  Fixes 334789.

2006-03-17  Andreas Köhler  <andi5.py@gmx.net>

	* src/engine/Split.c: Fix return value of get_corr_account_split
	  and reverse the tests of its callers. Fix 334801.

2006-03-16  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome-utils/gnc-tree-view-commodity.c:
	* src/gnome-utils/gnc-tree-view-price.c: